# storage_api_test

./: .gitignore  Cargo.toml
src/: client.rs  discovery.rs  generator.rs  lib.rs  main.rs  types.rs
src/templates/: client.rs  error.rs  mod.rs
storage-example/: Cargo.toml
storage-example/src/: main.rs
templates/api/: Cargo.toml.tera
templates/api/src/: error.rs.tera  lib.rs.tera  types.rs.tera
templates/cli/: Cargo.toml.tera
templates/cli/src/: main.rs.tera
tests/: integration_test.rs
