[package]
name = "storage_api_test"
version = "0.1.0"
edition = "2021"
authors = ["terekete.gatesma@gmail.com"]
description = "Google Storage API Client Generator"

[dependencies]
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
convert_case = "0.6"
regex = "1.9"
walkdir = "2.4"
yup-oauth2 = "8.3"

[dev-dependencies]
tempfile = "3.7"
tokio-test = "0.4"
anyhow = "1.0"  # Also needed for tests